# MFG_PDE

./: .codecov.yml  .dockerignore  .flake8  .gitignore  .pre-commit-config-dev.yaml  .pre-commit-config-strict.yaml  .pre-commit-config-uv.yaml  .pre-commit-config.yaml  .secrets.baseline  .uvrc  BUG8_INVESTIGATION_SUMMARY.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  COVERAGE_BADGE_SETUP.md  DIRECTORY_STRUCTURE_AUDIT.md  Dockerfile  GITIGNORE_UPDATE_SUMMARY.md  MERGE_READY_SUMMARY.md  MFG_RESEARCH_DOCUMENTATION_AUDIT.md  MIGRATION_PARTICLE_COLLOCATION.md  Makefile  ORGANIZATION.md  PACKAGE_REORGANIZATION_SUMMARY.md  PACKAGE_STRUCTURE_ANALYSIS.md  PHASE_2_PR_SUMMARY.md  PHASE_3_3_FINAL_STATUS.md  POST_MERGE_STATUS.md  QUICK_REFERENCE_PHASE_3_3.md  README.md  REPOSITORY_ORGANIZATION.md  SESSION_SUMMARY_2025_10_02.md  TYPE_ERROR_ANALYSIS.md  beach_evolution_demo.py  beach_example.py  beach_figure_analysis.py  broken_links_report.md  codecov.yml  compare_three_methods.py  (+30 more)
.claude/: settings.local.json.bak-onedrive
.github/: API_DESIGN_REVIEW_580.md  ARCHITECTURE_REVIEW_580.md  CICD_VERIFICATION_580.md  CODEOWNERS  CONTRIBUTOR_PRIVACY.md  DOCUMENTATION_REVIEW_580.md  PRE_MERGE_SUMMARY_580.md  PR_CHECKLIST_580.md  RELEASE_NOTES_580.md  TEST_COVERAGE_REVIEW_580.md  dependabot.yml  local-dev-setup.md  pre-commit-strictness-analysis.md  pull_request_template.md
archive/: .pre-commit-config-legacy.yaml  ARCHIVE_SUMMARY.md  simple.py  test_simple_api.py
benchmarks/: README.md  __init__.py  benchmark_callable_coefficients.py  benchmark_implicit_heat_speedup.py  benchmark_tensor_operators.py  hjb_solver_comparison.py  mfg_maze_comprehensive_analysis.py  parallel_computation_benchmark.py  particle_gpu_speedup_analysis.py  particle_kde_gpu_benchmark.py  particle_query_performance.py  performance_tracker.py  phase3_api_overhead.py  phase3_api_performance.py  qp_caching_benchmark.py  run_benchmarks.py  standard_problems.py  test_solver_performance.py  visualization.py
comprehensive_analytics_results/: comprehensive_lambda_parameter_analysis_dashboard.html  comprehensive_nx_parameter_analysis_dashboard.html  comprehensive_nx_parameter_analysis_sweep_data.parquet  mfg_solution_analysis_-_large_grid_convergence.html  mfg_solution_analysis_-_large_grid_density_2d.html  mfg_solution_analysis_-_large_grid_density_3d.html  mfg_solution_analysis_-_large_grid_solution.csv  mfg_solution_analysis_-_large_grid_solution.parquet  mfg_solution_analysis_-_large_grid_value_3d.html  mfg_solution_analysis_-_medium_grid_convergence.html  mfg_solution_analysis_-_medium_grid_density_2d.html  mfg_solution_analysis_-_medium_grid_density_3d.html  mfg_solution_analysis_-_medium_grid_solution.csv  mfg_solution_analysis_-_medium_grid_solution.parquet  mfg_solution_analysis_-_medium_grid_value_3d.html  mfg_solution_analysis_-_small_grid_convergence.html  mfg_solution_analysis_-_small_grid_density_2d.html  mfg_solution_analysis_-_small_grid_density_3d.html  mfg_solution_analysis_-_small_grid_solution.csv  mfg_solution_analysis_-_small_grid_solution.parquet  mfg_solution_analysis_-_small_grid_value_3d.html
demo_configs/: custom_experiment.yaml
docs/: CONSOLIDATION_ACTION_PLAN.md  DOCUMENTATION_CATEGORIZATION.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_POLICY.md  FOLDER_CONSOLIDATION_PLAN.md  GRADIENT_NOTATION_AUDIT_REPORT.md  NAMING_CONVENTIONS.md  PHASE_2_MIGRATION_COMPLETE.md  PHASE_3_H_SIGNATURE_AUDIT.md  README.md  SESSION_2025-10-30_PHASE3_INITIAL.md  SESSION_2025-10-30_PHASE3_SOLVERS_COMPLETE.md  SESSION_2025-10-30_PHASES_2_3_COMPLETE.md  [SUPERSEDED]_gradient_notation_standard.md  gradient_notation_standard.md  myst.yml  particle_collocation_analysis.md
examples/: README.md  RL_EXAMPLES_README.md  adaptive_convergence_decorator_example.py  advanced_convergence_example.py  advanced_visualization_demo.py  advanced_visualization_example.py  beach_config_experiment.py  compare_all_no_flux_bc.py  comprehensive_analytics_demo.py  config_management_demo.py  damped_fixed-point.py  damped_fixed_point_pure_fdm.py  factory_patterns_example.py  fdm_no_flux_bc.py  hybrid_no_flux_bc.py  hybrid_particle_fdm.py  interactive_research_notebook_example.py  jax_acceleration_example.py  logging_analysis_and_demo.py  logging_integration_example.py  omegaconf_demo_final.py  particle_collocation_numerical_example.py  polars_mfg_analysis.py  progress_monitoring_example.py  retrofit_solver_logging.py  simple_logging_demo.py  test_factory_patterns.py  validation_utilities_example.py  visualization_migration_demo.py  working_notebook_demo.py
investigations/: .gitignore  README.md
mfg_analytics_results/: mfg_solution_analysis_density_2d.html  mfg_solution_analysis_density_3d.html  mfg_solution_analysis_solution.csv  mfg_solution_analysis_solution.parquet  mfg_solution_analysis_value_3d.html  performance_test_-_100_points_dashboard.html  performance_test_-_100_points_sweep_data.parquet  performance_test_-_200_points_dashboard.html  performance_test_-_200_points_sweep_data.parquet  performance_test_-_500_points_dashboard.html  performance_test_-_500_points_sweep_data.parquet  performance_test_-_50_points_dashboard.html  performance_test_-_50_points_sweep_data.parquet
mfg_pde/: __init__.py  cli.py  simple.py  solve_mfg.py
mfg_pde_rust_experimental/: Cargo.toml  README.md  test_rust.py
mfgarchon/: __init__.py
polars_demo_data/: mfg_results.csv  mfg_results.json  mfg_results.parquet
scripts/: README.md  __init__.py  audit_deprecated_symbols.py  check_branch_health.sh  check_circular_imports.py  check_docs_structure.py  check_fail_fast.py  check_internal_deprecation.py  compare_benchmarks.py  diagnose_corner_interference.py  fix_polars_stubs.py  generate_deprecation_guide.py  generate_deprecation_report.py  manage_environments.sh  migrate_logging_imports.py  numpy_migration_tool.py  pre-commit-deprecation-check.sh  quick_2d_bc_test.py  quick_type_check.py  run_health_check.py  setup_development.sh  setup_env_vars.sh  test_2d_fdm_dirichlet_bc.py  test_bc_enforcement_no_corners.py  test_ghost_nodes_smoke.py  (+7 more)
(+3011 files in other folders)
