# pyproject.toml

[build-system]
requires = ["setuptools>=61.0"] # Minimum version of setuptools
build-backend = "setuptools.build_meta"
#backend-path = ["."] # Optional: If you have a custom build backend, you can specify it here.
# Optional: If you want to use PEP 517/518, you can specify the backend requirements here.

[project]
name = "mfg_pde"
version = "0.1.0" # Start with an initial version
authors = [
    { name = "Jiongyi Wang", email = "jiongyiwang@gmail.com" },
    # et al.
]
description = "A comprehensive Python framework for solving Mean Field Games with advanced numerical methods, interactive visualizations, and professional research tools."
readme = "README.md" 
requires-python = ">=3.8" 
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License", 
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.21",  # Support NumPy 1.21+ with trapezoid fallback via scipy
    "scipy>=1.7",   # Required for trapezoid integration when NumPy < 2.0
    "matplotlib>=3.4",
    "plotly>=5.0",
    "nbformat>=5.0",
    "jupyter>=1.0",
    "tqdm>=4.0",  # For progress bars
    "pydantic>=2.0,<3.0",  # Data validation and serialization (v2)
]

# Optional dependencies for development and advanced features
[project.optional-dependencies]
dev = [
    "mypy>=1.0",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=22.0",
    "isort>=5.0",
    "pre-commit>=2.0",
]
typing = [
    "types-tqdm",
    "types-setuptools", 
    "types-psutil",
]
performance = [
    "numba>=0.56",
    "dask[complete]>=2022.0",
]
jax = [
    "jax>=0.4.0",
    "jaxlib>=0.4.0",
    "optax>=0.1.0",
]
jax-cuda = [
    "jax[cuda12_pip]>=0.4.0",
    "optax>=0.1.0",
]
advanced = [
    "colorlog>=6.0",
    "hypothesis>=6.0",
]

# Optional: URLs for your project
[project.urls]
Homepage = "https://github.com/derrring/MFG_PDE" 
Repository = "https://github.com/derrring/MFG_PDE"
# Bug-Tracker = "https://github.com/derrring/MFG_PDE/issues"

# Command-line scripts
[project.scripts]

# --- Setuptools specific configuration ---
# This tells setuptools to automatically find packages in the current directory.
# If your package `mfg_pde` is directly in the root of your project (alongside pyproject.toml),
# this is usually sufficient.
# If `mfg_pde` is inside a `src` directory (e.g., `src/mfg_pde`), you would adjust `where`.
[tool.setuptools.packages.find]
where = ["."]  # Look for packages in the current directory.
include = ["mfg_pde*"]  # Include the mfg_pde package and its subpackages
exclude = ["examples*", "tests*", "benchmarks*", "docs*", "archive*"] # Exclude non-package directories from installation

# Optional: If you have data files to include with your package
# [tool.setuptools.package-data]
# "mfg_pde.some_submodule" = ["*.dat"]

# =============================================================================
# Code Quality and Development Tools Configuration
# =============================================================================

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | archive
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["mfg_pde"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
force_alphabetical_sort_within_sections = true

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Gradually enable during transition
ignore_missing_imports = true
exclude = [
    "archive/",
    "build/",
    "dist/"
]

# Mathematical variables are allowed to be single letters
[[tool.mypy.overrides]]
module = "mfg_pde.*"
# Allow mathematical notation like U, M, Nx, Nt
disable_error_code = "name-defined"

[tool.pylint.messages_control]
disable = [
    "C0103",  # Invalid name (allow mathematical notation)
    "R0913",  # Too many arguments (common in scientific computing)
    "R0914",  # Too many local variables
    "R0902",  # Too many instance attributes
    "R0903",  # Too few public methods
    "C0415",  # Import outside top-level
]

[tool.pylint.format]
max-line-length = 88
good-names = [
    "i", "j", "k",           # Loop indices
    "x", "y", "z", "t",      # Coordinates and time
    "U", "M",                # MFG solution variables
    "dx", "dt", "Dx", "Dt",  # Grid spacing
    "Nx", "Nt",              # Grid dimensions
    "fp", "hjb",             # Equation types
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--cov=mfg_pde",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.coverage.run]
source = ["mfg_pde"]
omit = [
    "*/tests/*",
    "*/archive/*",
    "*/__pycache__/*",
    "*/build/*",
    "*/dist/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
